--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test name</title>
 </head>
 <body>
-    <h1>Hello!</h1>
+    <header>
+        <nav>
+            <!-- Logo and menu -->
+        </nav>
+        <!-- замовити дзвінок -->
+    </header>
+    <main>
+        <section>
+            <h1>Сучасна пекарня</h1>
+        </section>
+        <section>
+            <h2>Новий формат традицій</h2>
+        </section>
+        <section>
+            <article>
+                <h2>Наші найкращі шеф-кухарі</h2>
+            </article>
+            <article>
+                <h2>Формати</h2>
+            </article>
+        </section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
