--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="#">
-                <img src="/" alt="logo">
+                <img src="images/logo.svg" alt="logo">
             </a>
             <ul>
                 <li><a href="#">Наші традиції</a></li>
@@ -35,6 +35,7 @@
             <h2>Новий формат традицій</h2>
             <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
             <p>Ми працюємо як найвідоміші мережі — <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний дизайн та висока якість обслуговування!</p>
+            <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться з посмішкою на батони хліба">
         </section>
         <section>
             <h2>Наші найкращі шеф-кухарі</h2>
@@ -98,7 +99,7 @@
     <footer>
         <nav>
             <a href="#">
-                <!-- Logo -->
+                <img src="images/logo.svg" alt="logo">
             </a>
             <ul>
                 <li><a href="#">Наші традиції</a></li>
