--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </a>
             <ul>
                 <li><a href="#traditions-section">Наші традиції</a></li>
-                <li><a href="#cookers-sections">Шеф-кухарі</a></li>
+                <li><a href="#chefs-sections">Шеф-кухарі</a></li>
                 <li><a href="#format-sections">Формати</a></li>
                 <li><a href="#contact-sections">Контакти</a></li>
             </ul>
@@ -37,7 +37,7 @@
             <p>Ми працюємо як найвідоміші мережі — <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний дизайн та висока якість обслуговування!</p>
             <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться з посмішкою на батони хліба">
         </section>
-        <section id="cookers-sections">
+        <section id="chefs-sections">
             <h2>Наші найкращі шеф-кухарі</h2>
             <ul>
                 <li>
@@ -94,6 +94,10 @@
         </section>
         <section id="contact-sections">
             <h2>Приєднуйся до мережі пекарень</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
+                width="603" height="595" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <footer>
@@ -102,10 +106,10 @@
                 <img src="images/logo.svg" alt="logo">
             </a>
             <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="#traditions-section">Наші традиції</a></li>
+                <li><a href="#chefs-sections">Шеф-кухарі</a></li>
+                <li><a href="#format-sections">Формати</a></li>
+                <li><a href="#contact-sections">Контакти</a></li>
             </ul>
         </nav>
         <address>
