--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </nav>
         <address>
             <ul>
-                <li><a href="tel:+ 38 (096) 000 00 07">+ 38 (096) 000 00 07</a></li>
+                <li><a href="tel:+38(096)0000007">+38 (096) 000 00 07</a></li>
                 <li><a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
                 <li><a href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7" target="_blank">Україна, м. Київ,
                 вул. Січових Стрільців 54</a></li>
