--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </ul>
         </nav>
         
-        <button type="button">Замовити дзвінок</button><!-- замовити дзвінок -->
+        <button class="button" type="button">Замовити дзвінок</button><!-- замовити дзвінок -->
     </header>
     <main>
         <section>
-            <h1>Сучасна пекарня</h1>
+            <h1 class="main_title">Сучасна пекарня</h1>
         </section>
         <section id="traditions-section">
             <ul>
