--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <img src="images/logo.svg" alt="logo">
             </a>
             <ul>
-                <li><a href="#traditions-section">Наші традиції</a></li>
-                <li><a href="#chefs-sections">Шеф-кухарі</a></li>
-                <li><a href="#format-sections">Формати</a></li>
-                <li><a href="#contact-sections">Контакти</a></li>
+                <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
+                <li><a class="link" href="#format-sections">Формати</a></li>
+                <li><a class="link" href="#contact-sections">Контакти</a></li>
             </ul>
         </nav>
         
@@ -25,21 +25,21 @@
     </header>
     <main>
         <section>
-            <h1 class="main_title">Сучасна пекарня</h1>
+            <h1 class="hero_title"><span class="accent">Сучасна</span> пекарня</h1>
         </section>
         <section id="traditions-section">
-            <ul>
+            <ul class="advantages_list">
                 <li>Великий попит на ринку </li>
                 <li>Доступні за бюджетом формати</li>
                 <li>Досвідчена управлінська команда</li>
             </ul>
-            <h2>Новий формат традицій</h2>
+            <h2 class="section_title">Новий формат традицій</h2>
             <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
             <p>Ми працюємо як найвідоміші мережі — <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний дизайн та висока якість обслуговування!</p>
             <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться з посмішкою на батони хліба">
         </section>
         <section id="chefs-sections">
-            <h2>Наші найкращі шеф-кухарі</h2>
+            <h2 class="section_title">Наші найкращі шеф-кухарі</h2>
             <ul>
                 <li>
                     <article>
@@ -62,7 +62,7 @@
             
         </section>
         <section id="format-sections">
-            <h2>Формати</h2>
+            <h2 class="section_title">Формати</h2>
             <ul>
                 <li><article>
                     <h3 lang="en">Walrus</h3>
@@ -94,7 +94,7 @@
             </ul>
         </section>
         <section id="contact-sections">
-            <h2>Приєднуйся до мережі пекарень</h2>
+            <h2 class="section_title">Приєднуйся до мережі пекарень</h2>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
                 width="603" height="595" style="border:0;" allowfullscreen="" loading="lazy"
@@ -107,10 +107,10 @@
                 <img src="images/logo.svg" alt="logo">
             </a>
             <ul>
-                <li><a href="#traditions-section">Наші традиції</a></li>
-                <li><a href="#chefs-sections">Шеф-кухарі</a></li>
-                <li><a href="#format-sections">Формати</a></li>
-                <li><a href="#contact-sections">Контакти</a></li>
+                <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
+                <li><a class="link" href="#format-sections">Формати</a></li>
+                <li><a class="link" href="#contact-sections">Контакти</a></li>
             </ul>
         </nav>
         <address>
