--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться з посмішкою на батони хліба">
         </section>
         <section id="chefs-sections">
-            <h2 class="section_title">Наші найкращі шеф-кухарі</h2>
+            <h2 class="section_title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
             <ul>
                 <li>
                     <article>
