--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -30,9 +36,9 @@
       </section>
       <section id="traditions-section">
         <ul class="advantages_list">
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
+          <li class="advantages_item">Великий попит на ринку</li>
+          <li class="advantages_item">Доступні за бюджетом формати</li>
+          <li class="advantages_item">Досвідчена управлінська команда</li>
         </ul>
         <h2 class="section_title">Новий формат традицій</h2>
         <p>
@@ -50,13 +56,14 @@
         />
       </section>
       <section id="chefs-sections">
-        <h2 class="section_title">
-          Наші найкращі <span class="accent">шеф-кухарі</span>
+        <h2 class="section_title center">
+          Наші найкращі<br />
+          <span class="accent">шеф-кухарі</span>
         </h2>
-        <ul>
+        <ul class="format-items">
           <li>
             <article>
-              <h3>Настя</h3>
+              <h3 class="chef_title">Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
               <p>Я випечу для вас найсмачніші вироби!</p>
@@ -64,7 +71,7 @@
           </li>
           <li>
             <article>
-              <h3>Влад</h3>
+              <h3 class="chef_title">Влад</h3>
               <p>Привіт, я Влад!</p>
               <p>
                 Мій кодитерський стаж вже 18 років.
@@ -76,49 +83,51 @@
           </li>
         </ul>
       </section>
-      <section id="format-sections">
-        <h2 class="section_title">Формати</h2>
-        <ul>
+      <section id="format-sections center">
+        <h2 class="section_title center">Формати</h2>
+        <ul class="format-items">
           <li>
             <article>
-              <h3 lang="en">Walrus</h3>
-              <ul>
-                <li>Площа: до 120 м2</li>
-                <li>Меню: розширене меню</li>
-                <li>
+              <h3 class="format_title" lang="en">Walrus</h3>
+              <div class="format_text">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
                   Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
                   офіціанти-різнороби
-                </li>
-                <li>Посадкові місця: є</li>
-              </ul>
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Horseshoe</h3>
-              <ul>
-                <li>Площа: до 25 м2</li>
-                <li>Меню: найпопулярніші позиції меню</li>
-                <li>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</li>
-                <li>Посадкові місця: відсутні</li>
-              </ul>
+              <h3 class="format_title" lang="en">Horseshoe</h3>
+              <div class="format_text">
+                <p>Площа: до 25 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Handlebar</h3>
-              <ul>
-                <li>Площа: до 15 м2</li>
-                <li>Меню: найпопулярніші позиції меню</li>
-                <li>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</li>
-                <li>Посадкові місця: відсутні</li>
-              </ul>
+              <h3 class="format_title" lang="en">Handlebar</h3>
+              <div class="format_text">
+                <p>Площа: до 15 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
         </ul>
       </section>
       <section id="contact-sections">
         <h2 class="section_title">Приєднуйся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
           width="603"
@@ -144,12 +153,21 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+38(096)0000007">+38 (096) 000 00 07</a></li>
           <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            <a class="address_link" href="tel:+38(096)0000007"
+              >+38 (096) 000 00 07</a
+            >
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7" target="_blank"
+            <a class="address_link" href="mailto:shopbakery@gmail.com"
+              >shopbakery@gmail.com</a
+            >
+          </li>
+          <li>
+            <a
+              class="address_link"
+              href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
+              target="_blank"
               >Україна, м. Київ, вул. Січових Стрільців 54</a
             >
           </li>
@@ -164,9 +182,11 @@
             </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
+        <a class="address_link" href="#" target="_blank"
+          >Політика конфіденційності</a
+        >
+        <p class="address_copyright">&copy 2022 Дані захищені</p>
       </address>
-      <p>&copy 2022 Дані захищені</p>
     </footer>
   </body>
 </html>
