--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -32,7 +26,9 @@
     </header>
     <main>
       <section>
-        <h1 class="hero_title"><span class="accent">Сучасна</span> пекарня</h1>
+        <h1 class="hero_title center">
+          <span class="accent">Сучасна</span> пекарня
+        </h1>
       </section>
       <section id="traditions-section">
         <ul class="advantages_list">
