--- a/index.html
+++ b/index.html
@@ -9,180 +9,205 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#">
-          <img src="images/logo.svg" alt="logo" />
-        </a>
-        <ul>
-          <li><a class="link" href="#traditions-section">Наші традиції</a></li>
-          <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
-          <li><a class="link" href="#format-sections">Формати</a></li>
-          <li><a class="link" href="#contact-sections">Контакти</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav>
+          <a href="#">
+            <img src="images/logo.svg" alt="logo" />
+          </a>
+          <ul>
+            <li>
+              <a class="link" href="#traditions-section">Наші традиції</a>
+            </li>
+            <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
+            <li><a class="link" href="#format-sections">Формати</a></li>
+            <li><a class="link" href="#contact-sections">Контакти</a></li>
+          </ul>
+        </nav>
 
-      <button class="button" type="button">Замовити дзвінок</button
-      ><!-- замовити дзвінок -->
+        <button class="button" type="button">Замовити дзвінок</button
+        ><!-- замовити дзвінок -->
+      </div>
     </header>
     <main>
-      <section>
+      <section class="hero_section">
         <h1 class="hero_title center">
           <span class="accent">Сучасна</span> пекарня
         </h1>
       </section>
-      <section id="traditions-section">
-        <ul class="advantages_list">
-          <li class="advantages_item">Великий попит на ринку</li>
-          <li class="advantages_item">Доступні за бюджетом формати</li>
-          <li class="advantages_item">Досвідчена управлінська команда</li>
-        </ul>
-        <h2 class="section_title">Новий формат традицій</h2>
-        <p>
-          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
-          зберегла смак традиційної випічки та натуральність інгредієнтів.
-        </p>
-        <p>
-          Ми працюємо як найвідоміші мережі —
-          <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень
-          стильний дизайн та висока якість обслуговування!
-        </p>
-        <img
-          src="./images/baker-man.jpg"
-          alt="Чоловік пекар дивиться з посмішкою на батони хліба"
-        />
+      <section>
+        <div class="container">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <ul class="advantages_list">
+            <li class="advantages_item">Великий попит на ринку</li>
+            <li class="advantages_item">Доступні за бюджетом формати</li>
+            <li class="advantages_item">Досвідчена управлінська команда</li>
+          </ul>
+        </div>
       </section>
-      <section id="chefs-sections">
-        <h2 class="section_title center">
-          Наші найкращі<br />
-          <span class="accent">шеф-кухарі</span>
-        </h2>
-        <ul class="format-items">
-          <li>
-            <article>
-              <h3 class="chef_title">Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
-              <p>Я випечу для вас найсмачніші вироби!</p>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="chef_title">Влад</h3>
-              <p>Привіт, я Влад!</p>
-              <p>
-                Мій кодитерський стаж вже 18 років.
-                <span lang="en">SHOP BEKERY</span> - це наша любов, якою ми
-                ділимось кожен раз з Вами через нашу випічку!
-              </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-            </article>
-          </li>
-        </ul>
+      <section class="section traditions-section" id="traditions-section">
+        <div class="container">
+          <h2 class="traditions-title section_title">Новий формат традицій</h2>
+          <p class="traditions_text">
+            <span class="brand uppercase">shop bakery</span> — це пекарня, яка
+            взяла все найкраще, і зберегла смак традиційної випічки та
+            натуральність інгредієнтів.
+          </p>
+          <p class="traditions_text">
+            Ми працюємо як найвідоміші мережі —
+            <span class="brand">5 хвилин і замовлення готове.</span>
+            А ще у наших пекарень стильний дизайн та висока якість
+            обслуговування!
+          </p>
+          <img
+            src="./images/baker-man.jpg"
+            alt="Чоловік пекар дивиться з посмішкою на батони хліба"
+          />
+        </div>
       </section>
-      <section id="format-sections center">
-        <h2 class="section_title center">Формати</h2>
-        <ul class="format-items">
-          <li>
-            <article>
-              <h3 class="format_title" lang="en">Walrus</h3>
-              <div class="format_text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
+      <section class="section" id="chefs-sections">
+        <div class="container">
+          <h2 class="chefs-title section_title center">
+            Наші найкращі<br />
+            <span class="accent">шеф-кухарі</span>
+          </h2>
+          <ul class="format-items">
+            <li>
+              <article>
+                <h3 class="chef_title">Настя</h3>
+                <p>Привіт, я Настя!</p>
+                <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
+                <p>Я випечу для вас найсмачніші вироби!</p>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="chef_title">Влад</h3>
+                <p>Привіт, я Влад!</p>
                 <p>
-                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                  офіціанти-різнороби
+                  Мій кодитерський стаж вже 18 років.
+                  <span lang="en">SHOP BEKERY</span> - це наша любов, якою ми
+                  ділимось кожен раз з Вами через нашу випічку!
                 </p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format_title" lang="en">Horseshoe</h3>
-              <div class="format_text">
-                <p>Площа: до 25 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="format_title" lang="en">Handlebar</h3>
-              <div class="format_text">
-                <p>Площа: до 15 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-        </ul>
+                <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section id="contact-sections">
-        <h2 class="section_title">Приєднуйся до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+      <section class="section" id="format-sections center">
+        <div class="container">
+          <h2 class="formats-title section_title center">Формати</h2>
+          <ul class="format-items">
+            <li>
+              <article>
+                <h3 class="format_title" lang="en">Walrus</h3>
+                <div class="format_text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>
+                    Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                    офіціанти-різнороби
+                  </p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="format_title" lang="en">Horseshoe</h3>
+                <div class="format_text">
+                  <p>Площа: до 25 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article>
+                <h3 class="format_title" lang="en">Handlebar</h3>
+                <div class="format_text">
+                  <p>Площа: до 15 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section" id="contact-sections">
+        <div class="container">
+          <h2 class="contact-title section_title">
+            Приєднуйся до мережі пекарень
+          </h2>
+          <p>Заповни форму, щоб ми звʼязались з тобою!</p>
 
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
-          width="603"
-          height="595"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640546631747!2d30.488653212387387!3d50.45666967147485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1699621607534!5m2!1suk!2sua"
+            width="603"
+            height="595"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </section>
     </main>
     <footer>
-      <nav>
-        <a href="#">
-          <img src="images/logo.svg" alt="logo" />
-        </a>
-        <ul>
-          <li><a class="link" href="#traditions-section">Наші традиції</a></li>
-          <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
-          <li><a class="link" href="#format-sections">Формати</a></li>
-          <li><a class="link" href="#contact-sections">Контакти</a></li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="address_link" href="tel:+38(096)0000007"
-              >+38 (096) 000 00 07</a
-            >
-          </li>
-          <li>
-            <a class="address_link" href="mailto:shopbakery@gmail.com"
-              >shopbakery@gmail.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="address_link"
-              href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
-              target="_blank"
-              >Україна, м. Київ, вул. Січових Стрільців 54</a
-            >
-          </li>
-          <li>
-            <a href="#">
-              <!-- facebook icon -->
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <!-- instagram icon -->
-            </a>
-          </li>
-        </ul>
-        <a class="address_link" href="#" target="_blank"
-          >Політика конфіденційності</a
-        >
-        <p class="address_copyright">&copy 2022 Дані захищені</p>
-      </address>
+      <div class="container">
+        <nav>
+          <a href="#">
+            <img src="images/logo.svg" alt="logo" />
+          </a>
+          <ul>
+            <li>
+              <a class="link" href="#traditions-section">Наші традиції</a>
+            </li>
+            <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
+            <li><a class="link" href="#format-sections">Формати</a></li>
+            <li><a class="link" href="#contact-sections">Контакти</a></li>
+          </ul>
+        </nav>
+        <address>
+          <ul>
+            <li>
+              <a class="address_link" href="tel:+38(096)0000007"
+                >+38 (096) 000 00 07</a
+              >
+            </li>
+            <li>
+              <a class="address_link" href="mailto:shopbakery@gmail.com"
+                >shopbakery@gmail.com</a
+              >
+            </li>
+            <li>
+              <a
+                class="address_link"
+                href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
+                target="_blank"
+                >Україна, м. Київ, вул. Січових Стрільців 54</a
+              >
+            </li>
+            <li>
+              <a href="#">
+                <!-- facebook icon -->
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <!-- instagram icon -->
+              </a>
+            </li>
+          </ul>
+          <a class="address_link" href="#" target="_blank"
+            >Політика конфіденційності</a
+          >
+          <p class="address_copyright">&copy 2022 Дані захищені</p>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
