--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
   <body>
     <header>
       <div class="container">
-        <nav>
-          <a href="#">
-            <img src="images/logo.svg" alt="logo" />
-          </a>
-          <ul>
-            <li>
-              <a class="link" href="#traditions-section">Наші традиції</a>
-            </li>
-            <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
-            <li><a class="link" href="#format-sections">Формати</a></li>
-            <li><a class="link" href="#contact-sections">Контакти</a></li>
-          </ul>
-        </nav>
-
-        <button class="button" type="button">Замовити дзвінок</button
-        ><!-- замовити дзвінок -->
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="#">
+              <img src="images/logo.svg" alt="logo" />
+            </a>
+            <ul class="header-menu">
+              <li>
+                <a class="link" href="#traditions-section">Наші традиції</a>
+              </li>
+              <li><a class="link" href="#chefs-sections">Шеф-кухарі</a></li>
+              <li><a class="link" href="#format-sections">Формати</a></li>
+              <li><a class="link" href="#contact-sections">Контакти</a></li>
+            </ul>
+          </nav>
+          <button class="button" type="button">Замовити дзвінок</button
+          ><!-- замовити дзвінок -->
+        </div>
       </div>
     </header>
     <main>
@@ -34,7 +35,7 @@
           <span class="accent">Сучасна</span> пекарня
         </h1>
       </section>
-      <section>
+      <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages_list">
@@ -46,22 +47,30 @@
       </section>
       <section class="section traditions-section" id="traditions-section">
         <div class="container">
-          <h2 class="traditions-title section_title">Новий формат традицій</h2>
-          <p class="traditions_text">
-            <span class="brand uppercase">shop bakery</span> — це пекарня, яка
-            взяла все найкраще, і зберегла смак традиційної випічки та
-            натуральність інгредієнтів.
-          </p>
-          <p class="traditions_text">
-            Ми працюємо як найвідоміші мережі —
-            <span class="brand">5 хвилин і замовлення готове.</span>
-            А ще у наших пекарень стильний дизайн та висока якість
-            обслуговування!
-          </p>
-          <img
-            src="./images/baker-man.jpg"
-            alt="Чоловік пекар дивиться з посмішкою на батони хліба"
-          />
+          <div class="traditions-container">
+            <div class="traditions-content">
+              <h2 class="traditions-title section_title">
+                Новий формат традицій
+              </h2>
+              <p class="traditions_text">
+                <span class="brand uppercase">shop bakery</span> — це пекарня,
+                яка взяла все найкраще, і зберегла смак<br />
+                традиційної випічки та натуральність інгредієнтів.
+              </p>
+              <p class="traditions_text limited">
+                Ми працюємо як найвідоміші мережі —
+                <span class="brand">5 хвилин і замовлення готове.</span><br />
+                А ще у наших пекарень стильний дизайн та висока якість
+                обслуговування!
+              </p>
+            </div>
+            <div class="traditions-images">
+              <img
+                src="./images/baker-man.jpg"
+                alt="Чоловік пекар дивиться з посмішкою на батони хліба"
+              />
+            </div>
+          </div>
         </div>
       </section>
       <section class="section" id="chefs-sections">
@@ -97,9 +106,9 @@
       <section class="section" id="format-sections center">
         <div class="container">
           <h2 class="formats-title section_title center">Формати</h2>
-          <ul class="format-items">
-            <li>
-              <article>
+          <ul class="formats-list">
+            <li class="formats-item">
+              <article class="format-card">
                 <h3 class="format_title" lang="en">Walrus</h3>
                 <div class="format_text">
                   <p>Площа: до 120 м2</p>
@@ -112,8 +121,8 @@
                 </div>
               </article>
             </li>
-            <li>
-              <article>
+            <li class="formats-item">
+              <article class="format-card">
                 <h3 class="format_title" lang="en">Horseshoe</h3>
                 <div class="format_text">
                   <p>Площа: до 25 м2</p>
@@ -123,8 +132,8 @@
                 </div>
               </article>
             </li>
-            <li>
-              <article>
+            <li class="formats-item">
+              <article class="format-card">
                 <h3 class="format_title" lang="en">Handlebar</h3>
                 <div class="format_text">
                   <p>Площа: до 15 м2</p>
