--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
           <ul class="format-items">
             <li>
               <article>
+                <img
+                  class="chet-photo"
+                  src="./images/nastya-chef.jpg"
+                  alt="Настя"
+                />
                 <h3 class="chef_title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
@@ -90,6 +95,11 @@
             </li>
             <li>
               <article>
+                <img
+                  class="chet-photo"
+                  src="./images/vlad-chef.jpg"
+                  alt="Влад"
+                />
                 <h3 class="chef_title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -165,7 +175,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav>
           <a href="#">
