--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
       <section class="section" id="format-sections center">
         <div class="container">
           <h2 class="formats-title section_title center">Формати</h2>
+          <button class="carusel-button" type="button">
+            <svg width="44" height="44">
+              <use href="./images/symbol-defs.svg#icon-arrow"></use>
+            </svg>
+          </button>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -154,6 +159,11 @@
               </article>
             </li>
           </ul>
+          <button class="carusel-button" type="button">
+            <svg width="44" height="44">
+              <use href="./images/symbol-defs.svg#icon-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="section" id="contact-sections">
@@ -193,31 +203,36 @@
         <address>
           <ul>
             <li>
-              <a class="address_link" href="tel:+38(096)0000007"
-                >+38 (096) 000 00 07</a
-              >
+              <a class="address_link" href="tel:+38(096)0000007">
+                +38 (096) 000 00 07
+              </a>
             </li>
             <li>
-              <a class="address_link" href="mailto:shopbakery@gmail.com"
-                >shopbakery@gmail.com</a
-              >
+              <a class="address_link" href="mailto:shopbakery@gmail.com">
+                shopbakery@gmail.com
+              </a>
             </li>
             <li>
               <a
                 class="address_link"
                 href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
                 target="_blank"
-                >Україна, м. Київ, вул. Січових Стрільців 54</a
               >
-            </li>
-            <li>
-              <a href="#">
-                <!-- facebook icon -->
+                Україна, м. Київ, вул. Січових Стрільців 54
               </a>
             </li>
             <li>
               <a href="#">
-                <!-- instagram icon -->
+                <svg class="address-icon" width="32" height="32">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="address-icon" width="32" height="32">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
           </ul>
