--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
               <li><a class="link" href="#contact-sections">Контакти</a></li>
             </ul>
           </nav>
-          <button class="button" type="button">Замовити дзвінок</button
+          <button class="button modal-btn-open" type="button">
+            Замовити дзвінок</button
           ><!-- замовити дзвінок -->
         </div>
       </div>
@@ -271,5 +272,11 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-btn-close" type="button">X</button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
