--- a/index.html
+++ b/index.html
@@ -277,6 +277,6 @@
         <button class="modal-btn-close" type="button">X</button>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
