--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
 
-    <link rel="stylesheet" href="./scss/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -142,6 +142,11 @@
             <ul class="formats-list">
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/walrus-format.jpg"
+                    alt="Walrus format"
+                  />
                   <h3 class="format_title" lang="en">Walrus</h3>
                   <div class="format_text">
                     <p>Площа: до 120 м2</p>
@@ -156,6 +161,11 @@
               </li>
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/horseshoe-format.jpg"
+                    alt="Horseshoe format"
+                  />
                   <h3 class="format_title" lang="en">Horseshoe</h3>
                   <div class="format_text">
                     <p>Площа: до 25 м2</p>
@@ -167,6 +177,11 @@
               </li>
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/handler-format.jpg"
+                    alt="Handlebar format"
+                  />
                   <h3 class="format_title" lang="en">Handlebar</h3>
                   <div class="format_text">
                     <p>Площа: до 15 м2</p>
@@ -320,7 +335,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">X</button>
         <h2 class="center">Замовити дзвінок</h2>
