--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
+        <div class="header__container">
+          <nav class="header__nav">
             <a href="#">
               <img src="images/logo.svg" alt="logo" />
             </a>
-            <ul class="header-menu">
+            <ul class="header__menu">
               <li>
                 <a class="link" href="#traditions-section">Наші традиції</a>
               </li>
@@ -32,36 +32,45 @@
       </div>
     </header>
     <main>
-      <section class="hero_section">
-        <h1 class="hero_title center">
-          <span class="accent">Сучасна</span> пекарня
+      <section class="hero-section">
+        <h1 class="hero-section__title center">
+          <span class="text-brand">Сучасна</span> пекарня
         </h1>
       </section>
       <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="advantages_list">
-            <li class="advantages_item">Великий попит на ринку</li>
-            <li class="advantages_item">Доступні за бюджетом формати</li>
-            <li class="advantages_item">Досвідчена управлінська команда</li>
+          <ul class="advantages-section__list">
+            <li class="advantages-section__item">Великий попит на ринку</li>
+            <li class="advantages-section__item">
+              Доступні за бюджетом формати
+            </li>
+            <li class="advantages-section__item">
+              Досвідчена управлінська команда
+            </li>
           </ul>
         </div>
       </section>
       <section class="section traditions-section" id="traditions-section">
         <div class="container">
-          <div class="traditions-container">
-            <div class="traditions-content">
-              <h2 class="traditions-title section_title">
+          <div class="traditions-section__container">
+            <div class="traditions-section__content">
+              <h2 class="traditions-section__title section_title">
                 Новий формат традицій
               </h2>
-              <p class="traditions_text">
-                <span class="brand uppercase">shop bakery</span> — це пекарня,
-                яка взяла все найкраще, і зберегла смак<br />
+              <p>
+                <span class="text-brand text-bold text-uppercase"
+                  >shop bakery</span
+                >
+                — це пекарня, яка взяла все найкраще, і зберегла смак<br />
                 традиційної випічки та натуральність інгредієнтів.
               </p>
-              <p class="traditions_text limited">
+              <p
+                class="traditions-section__text traditions-section__text--limited"
+              >
                 Ми працюємо як найвідоміші мережі —
-                <span class="brand">5 хвилин і замовлення готове.</span><br />
+                <span class="text-brand">5 хвилин і замовлення готове.</span
+                ><br />
                 А ще у наших пекарень стильний дизайн та висока якість
                 обслуговування!
               </p>
