--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           </div>
         </div>
       </section>
-      <section class="section" id="chefs-sections">
+      <section class="chefs-section section" id="chefs-sections">
         <div class="container">
-          <h2 class="chefs-title section_title center">
+          <h2 class="chefs-section__title section__title center">
             Наші найкращі<br />
-            <span class="accent">шеф-кухарі</span>
+            <span class="text-brand-dark">шеф-кухарі</span>
           </h2>
           <ul class="chefs-list">
             <li class="chefs-item">
