--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
                 Приєднуйся до мережі пекарень
               </h2>
               <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-              <form action="#" name="contact-form" autocomplete="off">
+              <form
+                class="form"
+                action="#"
+                name="contact-form"
+                autocomplete="off"
+              >
                 <div class="form-field">
                   <label class="form-label visually-hidden" for="user-name"
                     >Ім'я</label
