--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="traditions-section__container">
             <div class="traditions-section__content">
-              <h2 class="traditions-section__title section_title">
+              <h2 class="traditions-section__title section__title">
                 Новий формат традицій
               </h2>
               <p>
@@ -171,7 +171,7 @@
               <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="formats-card__image"
+                    class="format-card__image"
                     src="./images/horseshoe-format.jpg"
                     alt="Horseshoe format"
                   />
