--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a class="link" href="#contact-sections">Контакти</a></li>
             </ul>
           </nav>
-          <button class="button modal-btn-open" type="button">
+          <button class="header__button button modal-btn-open" type="button">
             Замовити дзвінок</button
           ><!-- замовити дзвінок -->
         </div>
