--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
             </ul>
           </nav>
           <button class="header__button button modal-btn-open" type="button">
-            Замовити дзвінок</button
-          ><!-- замовити дзвінок -->
+            Замовити дзвінок
+          </button>
+          <button class="header__burger" type="button">
+            <svg width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-menu"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </header>
@@ -37,7 +42,7 @@
           <span class="text-brand">Сучасна</span> пекарня
         </h1>
       </section>
-      <section class="advantages-section">
+      <!-- <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-section__list">
@@ -50,8 +55,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section traditions-section" id="traditions-section">
+      </section> -->
+      <!-- <section class="section traditions-section" id="traditions-section">
         <div class="container">
           <div class="traditions-section__container">
             <div class="traditions-section__content">
@@ -84,8 +89,8 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="chefs-section section" id="chefs-sections">
+      </section> -->
+      <!-- <section class="chefs-section section" id="chefs-sections">
         <div class="container">
           <h2 class="chefs-section__title section__title center">
             Наші найкращі<br />
@@ -138,8 +143,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="formats-section section center" id="format-sections">
+      </section> -->
+      <!-- <section class="formats-section section center" id="format-sections">
         <div class="container">
           <h2 class="formats-section__title section__title center">Формати</h2>
           <div class="formats-section__container">
@@ -208,8 +213,8 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="contact-section section" id="contact-sections">
+      </section> -->
+      <!-- <section class="contact-section section" id="contact-sections">
         <div class="container">
           <div class="contact-section__container">
             <div class="contact-section__form">
@@ -282,9 +287,9 @@
             ></iframe>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <nav class="footer-nav">
@@ -348,7 +353,7 @@
           </address>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">X</button>
