--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
           <button class="header__button button modal-btn-open" type="button">
             Замовити дзвінок
           </button>
-          <button class="header__burger" type="button">
+          <button class="header__burger menu-btn-open" type="button">
             <svg width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-menu"></use>
             </svg>
           </button>
+          <div class="mobile-menu">
+            <button class="menu-btn-close" type="button">Close</button>
+          </div>
         </div>
       </div>
     </header>
@@ -289,7 +292,7 @@
         </div>
       </section> -->
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <nav class="footer-nav">
@@ -353,7 +356,7 @@
           </address>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">X</button>
@@ -412,5 +415,6 @@
       </div>
     </div>
     <script src="js/modal.js"></script>
+    <script src="js/mobile-menu.js"></script>
   </body>
 </html>
