--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 обслуговування!
               </p>
             </div>
-            <div class="traditions-images">
+            <div class="traditions-section__images">
               <img
                 class="baker-photo"
                 src="./images/baker-man.jpg"
