--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             </div>
             <div class="traditions-section__images">
               <img
+                class="baker-man"
                 src="./images/baker-man.jpg"
                 alt="Чоловік пекар дивиться з посмішкою на батони хліба"
               />
