--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           </div>
         </div>
       </section>
-      <!-- <section class="contact-section section" id="contact-sections">
+      <section class="contact-section section" id="contact-sections">
         <div class="container">
           <div class="contact-section__container">
             <div class="contact-section__form">
@@ -331,8 +331,8 @@
                 name="contact-form"
                 autocomplete="off"
               >
-                <div class="form-field">
-                  <label class="form-label visually-hidden" for="user-name"
+                <div class="contact-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-name"
                     >Ім'я</label
                   >
                   <input
@@ -343,8 +343,8 @@
                     placeholder="Ім'я"
                   />
                 </div>
-                <div class="form-field">
-                  <label class="form-label visually-hidden" for="user-tel"
+                <div class="contact-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-tel"
                     >Телефон</label
                   >
                   <input
@@ -355,8 +355,8 @@
                     placeholder="Телефон"
                   />
                 </div>
-                <div class="form-field">
-                  <label class="form-label visually-hidden" for="user-email"
+                <div class="contact-section__form-field input">
+                  <label class="input__label visually-hidden" for="user-email"
                     >Електронна пошта</label
                   >
                   <input
@@ -390,7 +390,7 @@
             ></iframe>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container">
