--- a/index.html
+++ b/index.html
@@ -410,44 +410,45 @@
             </ul>
           </nav>
           <address class="footer__adress">
-            <ul class="footer__address-list">
-              <li>
-                <a class="footer__address_link" href="tel:+38(096)0000007">
-                  +38 (096) 000 00 07
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer__address_link"
-                  href="mailto:shopbakery@gmail.com"
-                >
-                  shopbakery@gmail.com
-                </a>
-              </li>
-              <li>
-                <a
-                  class="footer__address_link"
-                  href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
-                  target="_blank"
-                >
-                  Україна, м. Київ, вул. Січових Стрільців 54
-                </a>
-              </li>
-              <li>
+            <div class="footer__adress-contacts">
+              <ul class="footer__address-list">
+                <li>
+                  <a class="footer__address_link" href="tel:+38(096)0000007">
+                    +38 (096) 000 00 07
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__address_link"
+                    href="mailto:shopbakery@gmail.com"
+                  >
+                    shopbakery@gmail.com
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="footer__address_link"
+                    href="https://maps.app.goo.gl/vpB8r5CX4fG1u7wv7"
+                    target="_blank"
+                  >
+                    Україна, м. Київ, вул. Січових Стрільців 54
+                  </a>
+                </li>
+              </ul>
+              <div>
                 <a href="#">
                   <svg class="footer__address-icon" width="32" height="32">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
-              </li>
-              <li>
                 <a href="#">
                   <svg class="footer__address-icon" width="32" height="32">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
-              </li>
-            </ul>
+              </div>
+            </div>
+
             <div class="footer__address-info">
               <a class="footer__address_link" href="#" target="_blank"
                 >Політика конфіденційності</a
@@ -460,7 +461,7 @@
     </footer>
     <div class="backdrop is-hidden">
       <div class="modal">
-        <button class="modal-btn-close" type="button">X</button>
+        <button class="modal__btn-close" type="button">X</button>
         <h2 class="center">Замовити дзвінок</h2>
         <p class="center">
           Залишіть заявку та наш спеціаліст зв'яжеться з Вами!
